# preprocessCore

./: CHANGELOG  DESCRIPTION  NAMESPACE  cleanup  configure  configure.in
R/: init.R  normalize.quantiles.R  quantile_extensions.R  rcModel.R  subColSummarize.R
inst/include/: avg.h  avg_log.h  biweight.h  log_avg.h  log_median.h  median.h  median_log.h  medianpolish.h  preprocessCore_background_stubs.c  preprocessCore_background_stubs.h  preprocessCore_normalization_stubs.c  preprocessCore_normalization_stubs.h  preprocessCore_summarization_stubs.c  preprocessCore_summarization_stubs.h  qnorm.h  rlm.h  rlm_se.h  rma_background4.h  weightedkerneldensity_stubs.c  weightedkerneldensity_stubs.h
man/: colSummarize.Rd  normalize.quantiles.Rd  normalize.quantiles.in.blocks.Rd  normalize.quantiles.robust.Rd  normalize.quantiles.target.Rd  rcModelPLMd.Rd  rcModelPLMr.Rd  rcModels.Rd  subrcModels.Rd
src/: Makevars  Makevars.in  R_colSummarize.c  R_plmd_interfaces.c  R_plmr_interfaces.c  R_rlm_interfaces.c  R_rlm_interfaces.h  R_subColSummarize.c  R_subrcModel_interfaces.c  avg.c  avg.h  avg_log.c  avg_log.h  biweight.c  biweight.h  common.h  init_package.c  lm.c  log_avg.c  log_avg.h  log_median.c  log_median.h  matrix_functions.c  median.c  median.h  median_log.c  median_log.h  medianpolish.c  medianpolish.h  plmd.c  plmr.c  qnorm.c  qnorm.h  rlm.c  rlm.h  rlm_anova.c  rlm_se.c  rma_background4.c  rma_background4.h  rma_common.c  (+3 more)
tests/: PLMdtest.R  qnormtest.R
